# Gstreamer_C_Cpp

./: README.md
Appsrc_OpenCv2UDP/Linux/: execute.sh
Appsrc_OpenCv2UDP/Windows/: Appsrc_OpenCv2UDP.cpp  CMakeLists.txt  ReadMe.txt  execute.bat
Appsrc_OpenCv2UDP/Windows/Debug/: Appsrc_OpenCv2UDP.ilk
DesktopScreenCast2UDP/Linux/: DesktopScreenCast2UDP.cpp  ReadMe.txt  execute.sh
DesktopScreenCast2UDP/Windows/: CMakeLists.txt  ReadMe.txt  execute.bat
DesktopScreenCast2UDP/Windows/Debug/: DesktopScreenCast2UDP.ilk
MicrophoneRecorder/Linux/: CMakeLists.txt  GstMikeRecorder.cpp  MikeRecoderToFile  execute.sh
MicrophoneRecorder/Windows/: CMakeLists.txt  GstMikeRecorder.cpp  execute.bat
MicrophoneRecorder/Windows/Debug/: MicrophoneRecoderToFile.ilk
RTP2OpenCvVideoCap/Linux/: CMakeLists.txt  UDP2OpenCvVideoCap.cpp
RTP2OpenCvVideoCap/Windows/: CMakeLists.txt  RTP2OpenCvVideoCap.cpp  ReadMe.txt  execute.bat
RTP2OpenCvVideoCap/Windows/Debug/: RTP2OpenCvVideoCap.ilk
TCP2OpenCvVideoCap/Linux/: execute.sh
TCP2OpenCvVideoCap/Windows/: CMakeLists.txt  TCP2OpenCvVideoCap.cpp  execute.bat
TCP2OpenCvVideoCap/Windows/Debug/: TCP2OpenCvVideoCap.ilk
UDP2OpenCvVideoCap/Linux/: execute.sh
UDP2OpenCvVideoCap/Windows/: execute.bat
UDP2OpenCvVideoCap/Windows/Debug/: UDP2OpenCvVideoCap.ilk
VideoFile2RTPServerStream/Linux/: CMakeLists.txt  File2RTPStream  execute.sh
VideoFile2RTPServerStream/Windows/: Stream_Video2RTP_Server.cpp  execute.bat
VideoFile2RTPServerStream/Windows/Debug/: File2RTPStream.ilk
VideoFile2TCPServerStream/Linux/: ReadMe.txt  Stream_Video2TCP_Server.cpp  execute.sh
VideoFile2TCPServerStream/Windows/: CMakeLists.txt  ReadMe.txt  execute.bat
VideoFile2TCPServerStream/Windows/Debug/: File2TCPStream.ilk
VideoFile2UDPServerStream/Linux/: CMakeLists.txt  File2UDPStream  Stream_Video2UDP_Server.cpp  execute.sh
VideoFile2UDPServerStream/Windows/: execute.bat
VideoFile2UDPServerStream/Windows/Debug/: File2UDPStream.ilk
WebCamMicrophone2Servers/Windows/: CMakeLists.txt  CommandInstructions.txt  VideoAudioServer.h  call_server.cpp  execute.bat
WebCamMicrophone2Servers/Windows/Debug/: WebCamMicrophone2Servers.ilk
Webcam2File/Linux/: Webcam2FileRecord  Webcam2FileRecord.cpp  execute.sh
Webcam2File/Windows/: CMakeLists.txt  Webcam2FileRecord.cpp  execute.bat
Webcam2File/Windows/Debug/: Webcam2FileRecord.ilk
Webcam2RTP/Linux/: CMakeLists.txt  Webcam2RTP.cpp  execute.sh
Webcam2RTP/Windows/: execute.bat
Webcam2RTP/Windows/Debug/: Webcam2RTP.ilk
Webcam2TCP/Linux/: CMakeLists.txt  execute.sh
Webcam2TCP/Windows/: Webcam2TCP.cpp  execute.bat
Webcam2TCP/Windows/Debug/: Webcam2TCP.ilk
Webcam2UDP/Linux/: Webcam2UDP.cpp  execute.sh
Webcam2UDP/Windows/: CMakeLists.txt  execute.bat
Webcam2UDP/Windows/Debug/: Webcam2UDP.ilk
